Complete final universal renderer implementation